Proyecto/k8s-cd/frontend/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: melvinv404/g12-frontend-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
